--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto&display=swap');
+
+:root{
+  --sidebar-button-color: #4dc6fd;
+}
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
@@ -5,6 +11,7 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 /*
@@ -44,4 +51,50 @@ button,
 textarea,
 select {
     font: inherit;
+}
+.container{
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+.side-bar{
+    background-color: var(--sidebar-button-color);
+    color: #fff;
+    display: grid;
+    grid-template-rows: 10% 35% 20%;
+}
+.logo{
+  display: flex;
+  align-items: center;
+}
+.logo-title{
+  font-size: 20px;
+}
+.nav{
+  padding:20px;
+  display: grid;
+  gap: 10px;
+}
+.nav li{
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.main-content{
+    border: 1px solid black;
+    display: grid;
+    grid-template-rows: 20% 80%;
+}
+.header{
+    border: 1px solid black;
+}
+.main{
+    border: 1px solid black;
+}
+
+svg{
+  fill: white;
+  width: 20px;
+  height: 20px;
 }
