--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Roboto&display=swap");
 
-:root{
-  --sidebar-button-color: #4dc6fd;
+:root {
+    --sidebar-button-color: #4dc6fd;
+    --input-main-color: #e2e8f0;
 }
 
 /*
@@ -52,49 +53,130 @@ textarea,
 select {
     font: inherit;
 }
-.container{
+.container {
     min-height: 100vh;
     display: grid;
     grid-template-columns: 20% 80%;
 }
-.side-bar{
+.side-bar {
     background-color: var(--sidebar-button-color);
     color: #fff;
     display: grid;
     grid-template-rows: 10% 35% 20%;
 }
-.logo{
-  display: flex;
-  align-items: center;
+.logo {
+    display: flex;
+    align-items: center;
 }
-.logo-title{
-  font-size: 20px;
+.logo-title {
+    font-size: 20px;
 }
-.nav{
-  padding:20px;
-  display: grid;
-  gap: 10px;
+.nav {
+    padding: 20px;
+    display: grid;
+    gap: 10px;
 }
-.nav li{
-  list-style-type: none;
-  display: flex;
-  align-items: center;
-  gap: 20px;
+.nav li {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    cursor: pointer;
 }
-.main-content{
-    border: 1px solid black;
+.main-content {
     display: grid;
     grid-template-rows: 20% 80%;
 }
-.header{
-    border: 1px solid black;
+.header {
+    z-index: 1;
+    box-shadow: 4px 0px 5px 5px rgb(0, 0, 0, 0.15);
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+    padding: 8px 20px 8px 30px;
+    gap: 12px;
 }
-.main{
-    border: 1px solid black;
+.header-top{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+}
+.header-top .search{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.search-input{
+  width: 80%;
+  background-color: var(--input-main-color);
+  border: none;
+  outline: none;
+  border-radius: 50px;
+  padding-left: 15px;
+}
+.profile-info{
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  justify-content: center;
 }
 
-svg{
-  fill: white;
-  width: 20px;
-  height: 20px;
+.image-container{
+  background-color: #facc15;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  border-radius: 50%;
+}
+.header-bottom{
+  display: grid;
+  grid-template-columns: 60% 40%;
+}
+
+.icon{
+  width: 25px;
+  height: auto;
+}
+.profile-image{
+  width: 40px;
+  height: auto;
+  grid-template-rows: 10% 20%;
+}
+.profile{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.greeting{
+  font-weight: bold;
+  font-size: 12px;
+}
+.scale{
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.buttons{
+  display: flex;
+  align-items: center;
+  padding-left: 15px;
+  gap: 30px;
+}
+
+button{
+  background-color: var(--sidebar-button-color);
+  border: none;
+  padding: 5px 27px;
+  border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.main {
+    background-color: #e2e8f0;
+}
+
+
+svg {
+    fill: white;
+    width: 20px;
+    height: 20px;
 }
