--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ select {
     font: inherit;
 }
 .container {
-    min-height: 100vh;
+    min-width: 100vw;
     display: grid;
     grid-template-columns: 20% 80%;
 }
@@ -62,7 +62,7 @@ select {
     background-color: var(--sidebar-button-color);
     color: #fff;
     display: grid;
-    grid-template-rows: 10% 35% 20%;
+    grid-template-rows: 8% 28% 20%;
 }
 .logo {
     display: flex;
@@ -95,88 +95,214 @@ select {
     padding: 8px 20px 8px 30px;
     gap: 12px;
 }
-.header-top{
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+.header-top {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
-.header-top .search{
-  display: flex;
-  gap: 10px;
-  align-items: center;
+.header-top .search {
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
-.search-input{
-  width: 80%;
-  background-color: var(--input-main-color);
-  border: none;
-  outline: none;
-  border-radius: 50px;
-  padding-left: 15px;
+.search-input {
+    width: 80%;
+    background-color: var(--input-main-color);
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    padding-left: 15px;
 }
-.profile-info{
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  justify-content: center;
-}
-
-.image-container{
-  background-color: #facc15;
-  width: 50px;
-  height: 50px;
-  padding: 5px;
-  border-radius: 50%;
-}
-.header-bottom{
-  display: grid;
-  grid-template-columns: 60% 40%;
+.profile-info {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    justify-content: center;
 }
 
-.icon{
-  width: 25px;
-  height: auto;
+.image-container {
+    background-color: #facc15;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    border-radius: 50%;
 }
-.profile-image{
-  width: 40px;
-  height: auto;
-  grid-template-rows: 10% 20%;
+.small {
+    width: 35px;
+    height: 35px;
 }
-.profile{
-  display: flex;
-  align-items: center;
-  gap: 15px;
-}
-.greeting{
-  font-weight: bold;
-  font-size: 12px;
-}
-.scale{
-  font-size: 18px;
-  font-weight: 900;
+.header-bottom {
+    display: grid;
+    grid-template-columns: 60% 40%;
 }
 
-.buttons{
-  display: flex;
-  align-items: center;
-  padding-left: 15px;
-  gap: 30px;
+.icon {
+    width: 25px;
+    height: auto;
+    cursor: pointer;
+}
+.profile-image {
+    width: 40px;
+    height: auto;
+    /* grid-template-rows: 10% 20%; */
+}
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.greeting {
+    font-weight: bold;
+    font-size: 12px;
+}
+.scale {
+    font-size: 18px;
+    font-weight: 900;
 }
 
-button{
-  background-color: var(--sidebar-button-color);
-  border: none;
-  padding: 5px 27px;
-  border-radius: 30px;
-  color: #fff;
-  cursor: pointer;
+.buttons {
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+    gap: 30px;
+}
+
+button {
+    background-color: var(--sidebar-button-color);
+    border: none;
+    padding: 5px 27px;
+    border-radius: 30px;
+    color: #fff;
+    cursor: pointer;
 }
 
 .main {
     background-color: #e2e8f0;
+    display: grid;
+    grid-template-columns: 65% 35%;
+    padding: 25px 20px 93px;
+    gap: 20px;
+}
+.projects {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 25px;
 }
 
+.project {
+    background-color: #fff;
+    border-left: 8px solid #f0b429;
+    display: flex;
+    flex-direction: column;
+    padding: 29px 10px;
+    border-radius: 10px;
+    gap: 20px;
+    font-size: 12px;
+    justify-content: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.icons {
+    display: flex;
+    justify-content: end;
+    gap: 20px;
+    justify-self: flex-end;
+}
+
+.section {
+    display: grid;
+    grid-template-rows: 50% 50%;
+    gap: 40px;
+}
+.announcements {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+.announcements-list {
+    background-color: #fff;
+    width: 80%;
+    padding: 25px;
+    border-radius: 10px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.trending{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.trend-profile-image {
+    width: 25px;
+    height: auto;
+}
+.trending-profiles {
+    background-color: #fff;
+    padding: 15px;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.image01-container {
+    width: 40px;
+    height: 40px;
+    background-color: #e0f2fe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+.image02-container {
+    width: 40px;
+    height: 40px;
+    background-color: #facc15;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+.image03-container {
+    width: 40px;
+    height: 40px;
+    background-color: #a3a3a3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+
+}
+.image04-container {
+    width: 40px;
+    height: 40px;
+    background-color: #fda4af;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+.trending-profile{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
 
 svg {
     fill: white;
     width: 20px;
     height: 20px;
+}
+.gray-text{
+    color: #747474;
 }
